# SDL3-OpenGL-Base

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Assets/Equinox-render/: Equinox.mtl
src/: main.cpp
src/Headers/: MyApp.h  Types.h  config.h
src/Headers/Material/: Material.h
src/Headers/Model/: Mesh.h  Model.h  ModelBase.h  ModelLoader.h
src/Headers/Transformation/: Transformation.h
src/Interfaces/: IDrawable.h  IGraphicsApp.h
src/Shaders/Axes/: Vert_axes.vert
src/Shaders/Models/: Frag_Model.frag  Vert_Model.vert
src/Shaders/Modules/: GLSL_modules_readme.md  Math.glsl
src/Shaders/Modules/Camera/: Camera.glsl  Camera_uniforms.glsl
src/Shaders/Modules/Color/: Color.glsl  Color_uniforms.glsl
src/Shaders/Modules/Material/: Material.glsl  Material_uniforms.glsl
src/Shaders/Modules/Transform/: Transform.glsl  Transform_uniforms.glsl
src/Shaders/Skybox/: Frag_skybox_skeleton.frag
src/Sources/: MyApp.cpp
src/Sources/Models/: Mesh.cpp  Model.cpp  ModelLoader.cpp
src/Utils/: Camera.cpp  Camera.h  CameraManipulator.cpp  CameraManipulator.h  GLUtils.cpp  GLUtils.hpp  Log.h  ObjParser.cpp  ObjParser.h  ProgramBuilder.cpp  ProgramBuilder.h  SDL_GLDebugMessageCallback.cpp
